apps/production/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.justindesio.com
  name: n8n
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - n8n.justindesio.com
    secretName: n8n-tls
  rules:
    - host: n8n.justindesio.com
      http:
        paths:
          - backend:
              service:
                name: n8n
                port:
                  number: 3008
            path: /
            pathType: Prefix
